# flime2

./: .env  .gitignore  analysis_options.yaml  justfile  pubspec.yaml
android/: .gitignore
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
assets/rime/: default.yaml
lib/: main.dart  native.dart
lib/api/: input_api.g.dart  native.dart  platform_api.g.dart  rime_bridge.g.dart
lib/app/: app.dart
lib/app/api/: api.dart
lib/app/router/: router.dart  router.gr.dart
lib/app/screens/: gallery_page.dart  home_page.dart  input_page.dart
lib/keyboard/: keyboard_view.dart
lib/keyboard/api/: api.dart
lib/keyboard/base/: event.dart  preset.dart
lib/keyboard/components/: keyboard.dart  keyboard_wrapper.dart  observer.dart
lib/keyboard/layouts/: extended_layout.dart  full_keyboard_layout.dart  functional_keyboard_layout.dart  main_layout.dart  number_keyboard_layout.dart  primary_keyboard_layout.dart  symbol_keyboard.dart  symbol_keyboard_layout.dart
lib/keyboard/router/: router.dart  router.gr.dart
lib/keyboard/services/: input_service.dart
lib/keyboard/stores/: constraint.dart  constraint.g.dart  keyboard_status.dart  keyboard_status.g.dart  settings.dart  settings.g.dart  theme.dart  theme.g.dart
lib/keyboard/widgets/: keyboard_wrapper.dart
lib/utils/: ffi.dart  keyboard_maps.dart  path.dart
native/: CMakeLists.txt  compile_commands.json
native/cmake/: Dotenv.cmake  FindBoost.cmake  FindMarisa.cmake  FindOpencc.cmake
native/include/: api.h  cxxapi.h
native/src/: api.c  cxxapi.cpp  hello.cpp
pigeons/: api.dart
rust/: Cargo.toml
rust/src/: api.rs  flime.rs  g.rs  lib.rs
test/: widget_test.dart
(+10 files in other folders)
