[package]
name = "flime"
version = "0.1.0"
edition = "2021"

[lib]
name = "flime"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
flutter_rust_bridge = "1.28.1"
serde = { version = "1.0.137", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
